kubernetes/apps/omni/omni/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omni
spec:
  hostnames: ["omni.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: omni
          namespace: omni
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /

#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: omni-siderolink
#spec:
#  hostnames: ["omni-siderolink.${SECRET_DOMAIN}"]
#  parentRefs:
#    - name: envoy-external
#      namespace: network
#      sectionName: https
#  rules:
#    - backendRefs:
#        - name: omni
#          namespace: omni
#          port: 8090
#      matches:
#        - path:
#            type: PathPrefix
#            value: /

#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: omni-k8s
#spec:
#  hostnames: ["omni-k8s.${SECRET_DOMAIN}"]
#  parentRefs:
#    - name: envoy-external
#      namespace: network
#      sectionName: https
#  rules:
#    - backendRefs:
#        - name: omni-k8s-proxy
#          namespace: omni
#          port: 8095
#      matches:
#        - path:
#            type: PathPrefix
#            value: /
