kubernetes/apps/omni/omni/app/ingress.yaml
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
#    # add an annotation indicating the issuer to use.
#    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
#  name: omni-ing
#spec:
#  ingressClassName: nginx
#  rules:
#  - host: omni.janncot.duckdns.org
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: omni
#            port:
#              number: 8080
#  tls:
#  # This secret must exist beforehand
#  # The cert must also contain the subj-name grpctest.dev.mydomain.com
#  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
#  - secretName: janncot-duckdns-org-production-tls
#    hosts:
#      - omni.janncot.duckdns.org
#  - secretName: wildcard.dev.mydomain.com
#    hosts:
#      - grpctest.dev.mydomain.com

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
  name: omni-k8s-ing
spec:
  ingressClassName: nginx
  rules:
  - host: omni-k8s.janncot.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omni-k8s-proxy
            port:
              number: 8095
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name grpctest.dev.mydomain.com
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: janncot-duckdns-org-production-tls
    hosts:
      - omni-k8s.janncot.duckdns.org
#  - secretName: wildcard.dev.mydomain.com
#    hosts:
#      - grpctest.dev.mydomain.com

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
  name: omni-siderolink-ing
spec:
  ingressClassName: nginx
  rules:
  - host: omni-siderolink.janncot.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omni
            port:
              number: 8090
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name grpctest.dev.mydomain.com
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: janncot-duckdns-org-production-tls
    hosts:
      - omni-siderolink.janncot.duckdns.org
#  - secretName: wildcard.dev.mydomain.com
#    hosts:
#      - grpctest.dev.mydomain.com
